asatsuyu/crates/asatsuyu-ast/src/snapshots/asatsuyu_ast__tests__snap_pipeline_with_call.snap
---
source: crates/asatsuyu-ast/src/lib.rs
assertion_line: 408
expression: "snapshot(\"fn f(x: Int) -> Int {\\n  x |> g(1)\\n}\")"
---
Module {
    imports: [],
    definitions: [
        Function(
            FnDef {
                name: Ident {
                    name: "f",
                    span: Span {
                        file_id: FileId(
                            0,
                        ),
                        start: 3,
                        end: 4,
                    },
                },
                visibility: Private,
                params: [
                    Param {
                        name: Ident {
                            name: "x",
                            span: Span {
                                file_id: FileId(
                                    0,
                                ),
                                start: 5,
                                end: 6,
                            },
                        },
                        type_ann: Named {
                            name: Ident {
                                name: "Int",
                                span: Span {
                                    file_id: FileId(
                                        0,
                                    ),
                                    start: 8,
                                    end: 11,
                                },
                            },
                            args: [],
                            span: Span {
                                file_id: FileId(
                                    0,
                                ),
                                start: 8,
                                end: 11,
                            },
                        },
                        span: Span {
                            file_id: FileId(
                                0,
                            ),
                            start: 5,
                            end: 11,
                        },
                    },
                ],
                return_type: Some(
                    Named {
                        name: Ident {
                            name: "Int",
                            span: Span {
                                file_id: FileId(
                                    0,
                                ),
                                start: 16,
                                end: 19,
                            },
                        },
                        args: [],
                        span: Span {
                            file_id: FileId(
                                0,
                            ),
                            start: 16,
                            end: 19,
                        },
                    },
                ),
                body: Block {
                    exprs: [
                        Pipeline {
                            left: Variable(
                                Ident {
                                    name: "x",
                                    span: Span {
                                        file_id: FileId(
                                            0,
                                        ),
                                        start: 24,
                                        end: 25,
                                    },
                                },
                            ),
                            right: Call {
                                func: Variable(
                                    Ident {
                                        name: "g",
                                        span: Span {
                                            file_id: FileId(
                                                0,
                                            ),
                                            start: 29,
                                            end: 30,
                                        },
                                    },
                                ),
                                args: [
                                    Literal(
                                        Literal {
                                            kind: Int,
                                            value: "1",
                                            span: Span {
                                                file_id: FileId(
                                                    0,
                                                ),
                                                start: 31,
                                                end: 32,
                                            },
                                        },
                                    ),
                                ],
                                span: Span {
                                    file_id: FileId(
                                        0,
                                    ),
                                    start: 28,
                                    end: 33,
                                },
                            },
                            span: Span {
                                file_id: FileId(
                                    0,
                                ),
                                start: 21,
                                end: 33,
                            },
                        },
                    ],
                    span: Span {
                        file_id: FileId(
                            0,
                        ),
                        start: 19,
                        end: 35,
                    },
                },
                span: Span {
                    file_id: FileId(
                        0,
                    ),
                    start: 0,
                    end: 35,
                },
            },
        ),
    ],
    span: Span {
        file_id: FileId(
            0,
        ),
        start: 0,
        end: 35,
    },
}
